Problème with data format

--- a/etudes/machine learning/Data Preparation for our studies .ipynb
+++ b/etudes/machine learning/Data Preparation for our studies .ipynb
@@ -51,7 +51,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from transplant.tools.dataset import Dataset \n",
@@ -64,7 +66,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_static_str_to_num=train_static_0.apply(pd.to_numeric,errors='coerce').dropna(1, how=\"all\")\n",
@@ -95,7 +99,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "drop_test=[]\n",
@@ -119,7 +125,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_static_filled.shape, test_static_filled.shape"
@@ -191,6 +199,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -208,7 +217,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "static_id=train_static['id_patient'].sort_values().unique()\n",
@@ -218,7 +229,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "static_id.shape , dynamic_id.shape"
@@ -228,6 +241,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -263,7 +277,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fig = plt.figure(figsize=(20,16))\n",
@@ -282,7 +298,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "mean_dynamic_train=train_dynamic_0.groupby(['id_patient']).mean().mean()"
@@ -291,7 +309,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_dynamic=train_dynamic_0.fillna(mean_dynamic_train)\n",
@@ -301,7 +321,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_dynamic_flat=train_dynamic.groupby(['id_patient'], as_index=False).mean()\n",
@@ -311,7 +333,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_dynamic_flat.head()"
@@ -327,7 +351,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_static.columns"
@@ -355,7 +381,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_glob, test_glob = merge_dyn_sta(train_static,train_dynamic_flat,test_static,test_dynamic_flat)"
@@ -365,6 +393,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -375,7 +404,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_glob"
@@ -402,7 +433,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X_train=np.array(train_glob.drop(['target'], axis=1))\n",
@@ -418,7 +451,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X_train"
@@ -457,7 +492,42 @@
     "\n",
     "dataset = Dataset()\n",
     "\n",
-    "X_train, X_test , y_train, y_test = dataset.get_data_pierre()"
+    "X_train, X_test , y_train, y_test , col = dataset.get_data_pierre()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Age_donor', 'Aspirations_donor', 'BMI_donor', 'Donneur_CPT',\n",
+       "       'Insuffisance_renale', 'LAS', 'PAPS', 'PFO', 'PF_donor', 'Poids',\n",
+       "       'Poids_donor', 'RX_donor', 'Sex_donor', 'Tabagisme_donor', 'Taille',\n",
+       "       'Taille_donor', 'age', 'body_mass_index', 'diabetes', 'id_patient',\n",
+       "       'other_organ_transplantation', 'oto_score', 'pathologie',\n",
+       "       'plasmapherese', 'preoperative_ECMO', 'preoperative_ICU',\n",
+       "       'preoperative_mechanical_ventilation',\n",
+       "       'preoperative_pulmonary_hypertension', 'preoperative_vasopressor',\n",
+       "       'retransplant', 'sexe', 'super_urgence', 'thoracic_surgery_history',\n",
+       "       'time_on_waiting_liste', 'transplanted_twice_during_study_period',\n",
+       "       'B.I.S', 'BIS SR', 'DC', 'ET Des.', 'ET Sevo.', 'ETCO2', 'ETCO2 (mmHg)',\n",
+       "       'ETO2', 'FC', 'FICO2', 'FICO2 (mmHg)', 'FIN2O', 'FR', 'FR(ecg)', 'FiO2',\n",
+       "       'MAC', 'NMT TOF', 'NMTratio', 'PAPdia', 'PAPmoy', 'PAPsys', 'PASd',\n",
+       "       'PASm', 'PASs', 'PEEPtotal', 'PNId', 'PNIm', 'PNIs', 'Pmax', 'Pmean',\n",
+       "       'Pplat', 'RR(co2)', 'SpO2', 'SvO2 (m)', 'Temp', 'VT'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "col"
    ]
   },
   {
