Applied pineline for merged flatten dynamic

--- a/etudes/data preparation/Data Preparation for our studies .ipynb
+++ b/etudes/data preparation/Data Preparation for our studies .ipynb
@@ -15,20 +15,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "The aim of this notebook is to detail the function \"get_data_merged_dynamic_flatten()\" we have created for the transplant.tools.dataset classe."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Idea : \n",
-    "    Could be good to update our classe to use this without having to copy and paste "
+    "from transplant.tools.dataset import Dataset \n",
+    "\n",
+    "dataset = Dataset()\n",
+    "\n",
+    "X_train, X_test , y_train, y_test , X_col = dataset.get_data_merged_dynamic_flatten()"
    ]
   },
   {
@@ -492,7 +495,7 @@
     "\n",
     "dataset = Dataset()\n",
     "\n",
-    "X_train, X_test , y_train, y_test , col = dataset.get_data_pierre()"
+    "X_train, X_test , y_train, y_test , col = dataset.get_data_"
    ]
   },
   {
