Pipeline for merged dynamic flatten OK for 3 models

--- a/etudes/neural network/An even worst DNN.ipynb
+++ b/etudes/neural network/An even worst DNN.ipynb
@@ -194,65 +194,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Static merged with Flattent Dynamic (i.e. : took the mean for each time serie).\n",
+      "You can chose between One_Hot encoding ([0,1] , [1,0]) with 'One_Hot' for target data or not with 'cls'.\n",
+      "You can chose to center and reduce your data with the train set data with 'True'\n",
+      "Static merged with Flattent Dynamic (i.e. : took the mean for each time serie).\n",
+      "You can chose between One_Hot encoding ([0,1] , [1,0]) with 'One_Hot' for target data or not with 'cls'.\n",
+      "You can chose to center and reduce your data with the train set data with 'True'\n"
+     ]
+    }
+   ],
    "source": [
     "from transplant.tools.dataset import Dataset \n",
     "\n",
     "dataset = Dataset()\n",
     "\n",
-    "train, test = dataset.get_static()\n",
-    "\n",
-    "train1=train.apply(pd.to_numeric,errors='coerce').dropna(1, how=\"all\")\n",
-    "\n",
-    "mean_train1 = train1.mean()\n",
-    "\n",
-    "train1=train1.fillna(mean_train1)\n",
-    "\n",
-    "test1=test.apply(pd.to_numeric,errors='coerce').dropna(1, how=\"all\").fillna(mean_train1)\n",
-    "\n",
-    "drop_test1=[]\n",
-    "drop_train1=[]\n",
-    "\n",
-    "for i in train1.columns :\n",
-    "    if not(i in test1.columns) :\n",
-    "        drop_train1+=[i]\n",
-    "        \n",
-    "for i in test1.columns :\n",
-    "    if not(i in train1.columns) :\n",
-    "        drop_test1+=[i]\n",
-    "drop_test1 , drop_train1\n",
-    "\n",
-    "test1=test1.drop(drop_test1, axis=1)\n",
-    "train1=train1.drop(drop_train1, axis=1)\n",
-    "\n",
-    "train1.shape, test1.shape\n",
-    "\n",
-    "train2=train1.drop(['target'], axis=1)\n",
-    "test2=test1.drop(['target'], axis=1)\n",
-    "\n",
-    "mean_train2=train2.mean()\n",
-    "std_train2=train2.std()\n",
-    "\n",
-    "train2=(train2-mean_train2)/std_train2\n",
-    "test2=(test2-mean_train2)/std_train2\n",
-    "\n",
-    "dic_to_One_Hot = {0 : [1,0], 1 : [0,1]}\n",
-    "\n",
-    "X_train=np.array(train2)\n",
-    "X_test=np.array(test2)\n",
-    "\n",
-    "y_train_cls=np.array(train1['target'])\n",
-    "y_train=np.array(list(train1['target'].map(dic_to_One_Hot)))\n",
-    "\n",
-    "y_test_cls=test1['target']\n",
-    "y_test=np.array(list(y_test_cls.map(dic_to_One_Hot)))\n",
-    "y_test_cls=np.array(y_test_cls)\n",
-    "\n",
+    "X_train, X_test , y_train, y_test , X_col = dataset.get_data_merged_dynamic_flatten(\"One_Hot\",True)\n",
+    "X_train_not_use, X_test_not_use , y_train_cls, y_test_cls , X_col_not_use = dataset.get_data_merged_dynamic_flatten()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from datetime import datetime\n",
+    "\n",
     "\n",
     "now = datetime.utcnow().strftime(\"%Y%m%d%H%M%S\")\n",
     "root_logdir = \"tf_logs\"\n",
@@ -268,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -330,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -346,23 +320,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 Batch accuracy: 0.5614035 Validation accuracy: 0.5203252\n",
-      "100 Batch accuracy: 0.8596491 Validation accuracy: 0.63414633\n",
-      "200 Batch accuracy: 0.8596491 Validation accuracy: 0.63414633\n",
-      "300 Batch accuracy: 0.8947368 Validation accuracy: 0.60162604\n",
-      "400 Batch accuracy: 1.0 Validation accuracy: 0.5691057\n",
-      "500 Batch accuracy: 0.94736844 Validation accuracy: 0.57723576\n",
-      "600 Batch accuracy: 0.9649123 Validation accuracy: 0.57723576\n",
-      "700 Batch accuracy: 1.0 Validation accuracy: 0.5609756\n",
-      "800 Batch accuracy: 0.9649123 Validation accuracy: 0.5609756\n",
-      "900 Batch accuracy: 1.0 Validation accuracy: 0.5609756\n"
+      "0 Batch accuracy: 0.52 Validation accuracy: 0.5445545\n",
+      "100 Batch accuracy: 0.82 Validation accuracy: 0.5346535\n",
+      "200 Batch accuracy: 0.94 Validation accuracy: 0.55445546\n",
+      "300 Batch accuracy: 1.0 Validation accuracy: 0.55445546\n",
+      "400 Batch accuracy: 1.0 Validation accuracy: 0.56435645\n",
+      "500 Batch accuracy: 1.0 Validation accuracy: 0.56435645\n",
+      "600 Batch accuracy: 1.0 Validation accuracy: 0.55445546\n",
+      "700 Batch accuracy: 1.0 Validation accuracy: 0.56435645\n",
+      "800 Batch accuracy: 0.98 Validation accuracy: 0.55445546\n",
+      "900 Batch accuracy: 1.0 Validation accuracy: 0.56435645\n"
      ]
     }
    ],
@@ -380,69 +354,6 @@
     "        if epoch%100==0 :\n",
     "            print(epoch, \"Batch accuracy:\", acc_batch, \"Validation accuracy:\", acc_valid)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
