--- a/etudes/neural network/An even worst DNN.ipynb
+++ b/etudes/neural network/An even worst DNN.ipynb
@@ -175,7 +175,11 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "import random"
+    "import random\n",
+    "\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -211,18 +215,20 @@
     }
    ],
    "source": [
-    "from transplant.tools.dataset import Dataset \n",
+    "from transplant.tools.learningset import Learningset \n",
     "\n",
-    "dataset = Dataset()\n",
+    "learningset = Learningset ()\n",
     "\n",
-    "X_train, X_test , y_train, y_test , X_col = dataset.get_data_merged_dynamic_flatten(\"One_Hot\",True)\n",
-    "X_train_not_use, X_test_not_use , y_train_cls, y_test_cls , X_col_not_use = dataset.get_data_merged_dynamic_flatten()"
+    "X_train, X_test , y_train, y_test , X_col = learningset.get_data_merged_dynamic_flatten(\"One_Hot\",True)\n",
+    "X_train_not_use, X_test_not_use , y_train_cls, y_test_cls , X_col_not_use = learningset.get_data_merged_dynamic_flatten()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from datetime import datetime\n",
@@ -249,8 +255,8 @@
    "outputs": [],
    "source": [
     "n_inputs = X_train.shape[1]  \n",
-    "n_hidden1 = 10\n",
-    "n_hidden2 = 100\n",
+    "n_hidden1 = 35\n",
+    "n_hidden2 = 10\n",
     "n_outputs = 2\n",
     "\n",
     "X = tf.placeholder(tf.float32, shape=(None, n_inputs), name=\"X\")\n",
@@ -281,7 +287,7 @@
     "    \n",
     "    loss = tf.reduce_mean(xentropy, name=\"loss\")\n",
     "\n",
-    "learning_rate = 0.01\n",
+    "learning_rate = 0.1\n",
     "\n",
     "with tf.name_scope(\"train\"):\n",
     "    optimizer = tf.train.GradientDescentOptimizer(learning_rate)\n",
@@ -327,22 +333,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 Batch accuracy: 0.52 Validation accuracy: 0.5445545\n",
-      "100 Batch accuracy: 0.82 Validation accuracy: 0.5346535\n",
-      "200 Batch accuracy: 0.94 Validation accuracy: 0.55445546\n",
-      "300 Batch accuracy: 1.0 Validation accuracy: 0.55445546\n",
-      "400 Batch accuracy: 1.0 Validation accuracy: 0.56435645\n",
-      "500 Batch accuracy: 1.0 Validation accuracy: 0.56435645\n",
-      "600 Batch accuracy: 1.0 Validation accuracy: 0.55445546\n",
-      "700 Batch accuracy: 1.0 Validation accuracy: 0.56435645\n",
-      "800 Batch accuracy: 0.98 Validation accuracy: 0.55445546\n",
-      "900 Batch accuracy: 1.0 Validation accuracy: 0.56435645\n"
+      "0 Batch accuracy: 0.48425198 Validation accuracy: 0.43564355\n",
+      "100 Batch accuracy: 0.96062994 Validation accuracy: 0.56435645\n",
+      "200 Batch accuracy: 0.992126 Validation accuracy: 0.5841584\n",
+      "300 Batch accuracy: 0.996063 Validation accuracy: 0.6138614\n",
+      "400 Batch accuracy: 0.996063 Validation accuracy: 0.6039604\n",
+      "500 Batch accuracy: 1.0 Validation accuracy: 0.6039604\n",
+      "600 Batch accuracy: 1.0 Validation accuracy: 0.5940594\n",
+      "700 Batch accuracy: 1.0 Validation accuracy: 0.5940594\n",
+      "800 Batch accuracy: 1.0 Validation accuracy: 0.5841584\n",
+      "900 Batch accuracy: 1.0 Validation accuracy: 0.5841584\n",
+      "Wall time: 5.95 s\n"
      ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXIAAAD3CAYAAAAALt/WAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHZNJREFUeJzt3WtwXOd93/Hv2RuABXYBkFhcCF4lSo8uFKkLFVEXW3Ib\nTRzZrtVMnMzIShrFcqNOO+04mbROJn2RNmk6HStpelEdudY4VeK6dh2NW7uRM5M4mpqyXJOyLcoS\nH4o2Ad5wWZAgdnHbxe6evtgFsAAJYHFZ7J6zv88Mh9hzzh48+5D44dn/85yzjuu6iIiIdwVq3QAR\nEdkcBbmIiMcpyEVEPE5BLiLicQpyERGPC233N0wm0xteJtPZGWV8fHorm+Np6o+l1B+L1BdL+aE/\nEomYs9I+T43IQ6FgrZtQV9QfS6k/FqkvlvJ7f3gqyEVE5HoKchERj1OQi4h4nIJcRMTjFOQiIh6n\nIBcR8biKgtwY84Ax5m9vsP0jxpjvGWO+Y4z55Ja3TkRE1rTmBUHGmH8O/BIwtWx7GPgj4P7SvuPG\nmP9lrR2pRkNFtoPruuQLLpm5PNm5QunvpV9n5vJkcwUy2TzZXJ7MXKF0THF7PdwZurk5xOxsrtbN\nqBv10B8BBx67t5+bd7Vv+bkrubLzx8DPAS8v2347cNZaOw5gjPk28H7gK6udrLMzuqnF+YlEbMPP\n9aPt6g/XLYZbJlv6M5dnNpsjk81TqIPkcl0YHJteaNPsfDuzuYV2zy5r9/LXUfw6T6FQ+9cj/rS7\nL86xI7u3/LxrBrm19qvGmP032BUHJsoep4E1f9Vs5jLZRCJGMpne8PP9prw/8oUCmWyhNEIsjiAX\nRo8VjCave86SY4r7/CYUdIiEgjRFgkRCAWItYSLhIJFwgKZwkEg4SFM4sOSY+e1Lj1l8HA4GcJwV\nr6TeNjt2tnL1ytTaBzaIeugPx4HOWNOGM2y1Qdtm7rWSAsrPHAOubeJ8UoHxdIY3zyR580ySkfEZ\nZjPFEWd+C0eRkVBgIcTaWsLsiDfTFAoQiQRpCpUFXCnAgoH6mDPvbG9hLpsrBm4kWAzgcOC6sK23\ndldDojOKk8vXuhl1w+/9sZkgfxe4xRizA5ikWFb5zJa0Spa4MjHLyTNJTthRfnxxgvnI7tkRJdrU\nfF1YRcKlwI0ErgveJSPN+a/LQjocDhCogxHlRugdmzSqdQe5MeYpoM1a+6Ix5teBb1Jc/fKStfbS\nVjewUY2OT3PSJjlhk5wbSgHgALfs6eCoSXDvrQnMzQkFl4jgbPeHL2/mNrZ+H3ENXZnihE1y8vQo\n50cnAQg4DmZvB0dv6+beW7pob2taON7v/bFe6o9F6oul/NAfq93GdtvvRy6LXNflUnKKE3aUkzbJ\npbHiZEww4HDXTTu5zyS455YuYtFIjVsqIvVMQb7NXNfl/MgkJ+woJ2ySkavFVTyhYIC7D3Zx9LYE\ndx/sItocrnFLRcQrFOTboOC6nLucKtW8RxmbmAUgEg5w1CQ4els3d920k5Ym/XOIyPopOaqkUHA5\ne2mCE6dHOXkmyXg6A0BzJMgDd/Rw1CQ4dNNOmsL+/uQSEak+BfkWyhcKnDl/rThheSZJaioLQLQp\nxMOHernPdHPngU7CPv/YKRHZXgryTcrlC7w7OM5JO8qbZ8aYnJkDoK0lzPuP9HHUdHPbvk5CQf9e\nfCIitaUg34C5XJ4fnRvnhB3lB++NMZ0p3oynvTXCB+7t5+itCW7d2+HrKwdFpH4oyNfpO28P8/Jf\nWWazxct9O2NNPHRXL0dNNwf72wkEvHlVpIh4l4J8nV774WUy2TwffGAv95kEB/rinr2kXUT8QUG+\nDoWCy+BIml1drfzCBw7WujkiIoA+6m1dhq9Ok8nm2dere6KLSP1QkK/D4HDxXg37FeQiUkcU5Otw\nbrh4F8L9ffEat0REZJGCfB0GhtMEHIc93W21boqIyAIFeYXyhQLnSxOduqxeROqJgrxCQ1emyc4V\n2N+n+riI1BcFeYUGhooTnQc00SkidUZBXqEBTXSKSJ1SkFdoYDhNMOCwO6GJThGpLwryCuTyBS6M\nTtKfaCUcUpeJSH1RKlXg8tgUc7kC+3tVVhGR+qMgr8DA/BWdWrEiInVIQV6B+SA/oBG5iNQhBXkF\nBoZShIIO/YnWWjdFROQ6CvI1zOWKE517utv0cW0iUpeUTGu4NDZJvuBqolNE6paCfA3zV3Tq1rUi\nUq/W/IQgY0wAeAE4AmSAZ621Z8v2/xLwm8AE8AVr7eer1NaamL+iUx8mISL1qpIR+ZNAs7X2QeDT\nwPPzO4wxXcC/Bh4DHgU+bozZv/XNrJ2B4TThUIBdXZroFJH6VMlndj4CvApgrX3DGHO0bN9NwA+t\ntVcBjDHfA44BAyudrLMzSii08dvAJhLbNzLOzuW5lJzi4J4O+nrbt+37rsd29ocXqD8WqS+W8nN/\nVBLkcYplk3l5Y0zIWpsD3gPuNMb0AGng7wJnVjvZ+Pj0RttKIhEjmUxv+Pnr9ZPLKfIFl907W7f1\n+1Zqu/uj3qk/FqkvlvJDf6z2i6iS0koKKD9DoBTiWGvHgU8BXwX+O/AmMLbhltaZxTse+vc3uYh4\nXyVBfhx4AsAYcww4Nb/DGBMC7gXeB/wCcFvpeF/QihUR8YJKSiuvAI8bY14HHOAZY8xTQJu19kVj\nDBRH4rPA89ZaX43II+EAfTs10Ski9WvNILfWFoDnlm0+Xbb/d4Hf3eJ21VxmLs+lsSkO9rcTCDi1\nbo6IyIp0QdAKLoxM4rroik4RqXsK8hUsTHSqPi4idU5BvgLdg1xEvEJBvoKB4TRNkSA9O6K1boqI\nyKoU5Dcwm80xNDbF/p4YAUcTnSJS3xTkN3B+ZBIXlVVExBsU5DcwMDQ/0akVKyJS/xTkN6CJThHx\nEgX5DZwbTtPSFKK7o6XWTRERWZOCfJnp2RwjV6fZ3xvD0USniHiAgnyZ8yO6UZaIeIuCfJnF+rgm\nOkXEGxTky+jSfBHxGgX5MgNDaVqbQ3S1N9e6KSIiFVGQl5manWP02gz7++Ka6BQRz1CQl1moj6us\nIiIeoiAvoys6RcSLFORlNCIXES9SkJcZHE4Ti4bZEW+qdVNERCqmIC9JT2cZm5hlf68mOkXEWxTk\nJYMqq4iIRynIS87pjoci4lEK8hKtWBERr1KQlwwMp2lvi9AZ00SniHiLghyYmMwwns5wQKNxEfEg\nBTlaPy4i3qYgZzHI9ynIRcSDQmsdYIwJAC8AR4AM8Ky19mzZ/o8DvwHkgZestf+lSm2tGi09FBEv\nq2RE/iTQbK19EPg08Pyy/Z8Bfhp4GPgNY0zn1jax+s4Np+iMNdHepolOEfGeNUfkwCPAqwDW2jeM\nMUeX7X8LaAdygAO4q52sszNKKBTcQFOLEomtHTVfmZhhYjLLsUO9W37u7eDFNleT+mOR+mIpP/dH\nJUEeBybKHueNMSFrba70+G3gJDAF/IW19tpqJxsfn95QQ6H4D5FMpjf8/Bv5/ntJAPp2RLf83NVW\njf7wMvXHIvXFUn7oj9V+EVVSWkkB5WcIzIe4MeYw8CHgALAf6DbGfGzDLa2BgaHiP+4B1cdFxKMq\nCfLjwBMAxphjwKmyfRPADDBjrc0Do4CnauRasSIiXldJaeUV4HFjzOsUa+DPGGOeAtqstS8aY/4E\n+LYxJgv8GPhC1Vq7xVzXZWA4RVd7M7FopNbNERHZkDWD3FpbAJ5btvl02f7PAp/d4nZti6upDOnp\nOW41HbVuiojIhjX0BUG6olNE/KDBg7x0x8M+3WNFRLyrwYNcI3IR8b6GDXLXdRkYStHd0UJrc7jW\nzRER2bCGDfKxiVmmZnP6RCAR8byGDfLFsorq4yLibY0b5Asf7aYRuYh4W+MGua7oFBGfaMggL17R\nmaZnR5SWpkoubhURqV8NGeSj12aYyeR0oywR8YWGDPL5Ox6qPi4iftCYQa4rOkXERxozyIfSOMDe\nnrZaN0VEZNMaLsgLrsvASJq+rlaaI5roFBHva7ggH7k6TSabV31cRHyj4YJcE50i4jcNF+Tn5ic6\ndWm+iPhEwwX54HAax4E9mugUEZ9oqCAvFFwGR9L0d7XSFA7WujkiIluioYJ86MoU2bmCyioi4isN\nFeQLt67VPchFxEcaK8iHdA9yEfGfxgry4RTBgMOe7tZaN0VEZMs0TJDn8gXOj07Sn2glHNJEp4j4\nR8ME+eWxKeZymugUEf9pmCBf/IxOTXSKiL80TJAPasWKiPjUmrf/M8YEgBeAI0AGeNZae7a0rxf4\nUtnhdwOfttZ+tgpt3ZSB4RShoEN/l67oFBF/qeQ+rk8CzdbaB40xx4DngY8CWGuHgccAjDEPAr8P\nfK46Td24XL7AhdFJdifaCIca5k2IiDSISoL8EeBVAGvtG8aYo8sPMMY4wH8EPm6tza92ss7OKKFN\nrBpJJNZfGjl78Rq5vMvtB3Zu6Pn1zG+vZ7PUH4vUF0v5uT8qCfI4MFH2OG+MCVlrc2XbPgL8yFpr\n1zrZ+Pj0Opu4KJGIkUym1/287787DEBPR/OGnl+vNtoffqX+WKS+WMoP/bHaL6JK6gwpoPwMgWUh\nDvA08OL6m7Y9dA9yEfGzSoL8OPAEQKlGfuoGxxwFXt/Cdm2pgeEU4VCAXV26olNE/KeS0sorwOPG\nmNcBB3jGGPMU0GatfdEYkwBS1lq3mg3dqLlcnkvJKfb1xggFNdEpIv6zZpBbawvAc8s2ny7bn6S4\n7LAuXUxOkS+4KquIiG/5fog6MKSPdhMRf/N9kJ/TFZ0i4nO+D/KBoTSRcIC+ndFaN0VEpCp8HeSZ\nuTyXx6bY2xMjGPD1SxWRBubrdLswOknB1USniPibr4N8fqLzgCY6RcTH/B3kmugUkQbg+yBvigTp\n2aGJThHxL98G+Ww2x9CVKfb1xAg4Tq2bIyJSNb4N8vMjk7iubpQlIv7n2yBXfVxEGoWPg1wrVkSk\nMfg3yIfStDSFSHS21LopIiJV5csgn8nkGL46zf5eTXSKiP/5MsgHh/WJQCLSOHwZ5PMTnfsU5CLS\nAHwa5KV7kPdpolNE/M+nQZ6mtTlEor251k0REak63wX51Owco+Mz7O+N4WiiU0QagO+CfGGiU2UV\nEWkQvgvyAa1YEZEG478g14cti0iD8V+QD6eJRcPsiDfVuikiItsiVOsGbKX0dJaxiVkO3bRDE53b\nIJPPcmb8LLlCnvamOO2ROO1NMUIBX/23Eql7vvqJW7yiU2WVakll05wae4dTY+9w+up7zBVy1x3T\nFm4tBntTnI5InPam9uLXpW3tkXZikVYCju/eEIrUhK+CfH6i84AmOreM67qMTI/y1tg7vJV8h4HU\neVxcAHpbezjcdQexSBsTmRQTmRTXMhNMZFMkZ65waXJoxfMGnADxSKws7Of/tC95HA216N2VyBp8\nGeRaerg5BbfATyYGeWvsR5xKvsPozBgADg43d+zncNed3NV1B93RrlXPM5ub5Vop4CeyZUFf9vhS\n+jKD7oUVzxEOhEolm9IIvzS6n9/WUQr/pmBkS/tAxEvWDHJjTAB4ATgCZIBnrbVny/bfD/wh4ADD\nwNPW2tnqNHd1A8Mp2lsjdLTph3q9Mvksp6+e4a3kO7x95V0m56YAiAQj3J04xF1dd3Bo5+20RVor\nPmdzqJneUDO9rd0rHuO6LlNz00xkU6XQLwb9tVLQzz/+ycTgwjuBG36vYBORUJhCYeVjtoPjOMTC\nbav80okTC7cRDARr2k7xl0pG5E8CzdbaB40xx4DngY8CGGMc4HPAz1trzxpjngX2AbZaDV7JxFSW\nq6kMR27eqbfiFZqvd7+VfAc7vljvjkdiPLzrAQ533YHpPEg4GK5aGxzHoS3SSluklf62vhWPyxfy\npOcmS6P660f5qWwaAi75XKFqba1EwS1wdfYal6eGVzzGwSEeaVuYOyiWl8q+Lv3dGorq/7JUpJIg\nfwR4FcBa+4Yx5mjZvluBK8CnjDGHgG9Ya1cN8c7OKKHQxkcjicSN69+DYyMA3Hlz14rH+NF6Xqvr\nulxKD3Pi0lucuPQW7105tzDK3R3v42j/Ye7vP8LNO/bV5URkLx21bkLFZudmGZ9NcXXmGuMz17g6\nM8H4zMTC4/GZCYamhjmfvrjiOUKBEJ0t7exobqcz2lH8u6WjuK2lgx0txcct4RvfU6iRfg4q4ef+\nqCTI48BE2eO8MSZkrc0BXcBDwD8BzgJfN8acsNb+zUonGx+f3nBjE4kYyWT6hvt+eLoY5Il404rH\n+M1q/TFv3fXuAlwZm6p206uikv7YTiFa6HZa6I72QfT6/a7rMp2buW6iePFx8V3He1cHKFxZ+Z1G\nc7BpWQmnnZ7OHUxPZav46ioTDoQWJ7IjceKRWE3KSvX2f2MjVvtFVEmQp4DyMwRKIQ7F0fhZa+27\nAMaYV4GjwIpBXi26NH9RJp/l3atnOLVCvftw153cufO2ddW7Zes5jkNrOEprOMqutt4Vjyu4BdLZ\nqeJ8QbastJSZKJtLSDEynVx80vlteAEb4OAQi7QtBPvCktSFx8USU2s4WpfvCutVJUF+HPgI8OVS\njfxU2b6fAG3GmIOlCdD3AZ/f+mau7dxwis5YE+1tjXlFZz3Uu6U6Ak6A9qYY7U2rD1LmCjlSmTQT\n2RTBlgITExt/97tVsvksE9n0dauVhqdGuZC+tOLzgk6QeCS2OGG8bJnq/C+A5mCz5hGoLMhfAR43\nxrxOcWXKM8aYp4A2a+2LxphPAF8sTXy+bq39RhXbe0Pj6QwTk1nuuWX15XB+4rouF1NDvDbwPd4a\n+xEDqQvXre8+3HUn++K7NbJpEOFAiJ0tnexs6SyWEiL1W0pwXZeZ3OwNl6UuvuNIMZi+QCG1clkp\nEowsuw6hPPDb6WiKE4/4fznymkFurS0Azy3bfLps/98AP7XF7VqXRviMzqm5ac6nLjKYvsj51AUG\n0xe5lilOXax3fbdIrTmOQzTcQjTcQl9rz4rHFdwCk3NTC8G+0lzC/NzPSoJOgOI4tHYcx+HJm5/g\nA3se2fJz++KCIL99tNtsbpYL6Uul0L7IYOoCY7NXlxwTi7TxwO57MLFbVe8W35q/AjgeibEn1r/i\ncblCjnR2cmFkfy27NPjdQIG5ufw2tvx6juPQ1bKjKuf2SZB798OWs/k5Lk1eZjB1kfPpYmiPTCeX\nXPwSDbVw+45b2Rvbzb74bvbF99AeidPdHff8TLzIVggFQnQ2d9DZfOMlqn5YtbIazwe567oMDKXY\nGW8mHq3vKzrzhTyXpoZKo+xicF+eGqbgLtYAm4IRDnYcYG98N/tixdDe2ay7OYrIyjwf5OPpDKnp\nOe4z9XWxSMEtMDw1ulgeSV/g0uQQubK7BYYDIfbF9pSF9m66owlNTorIung+yM8N1X6i03VdkjNX\nFiYhB1MXuTB5iWx+8YKMgBOgv62PfbHdpeDeQ19rj+65ISKb5vkgX5jo3MZ7kF+dHS9bQVL8eyY3\ns7DfwaGvtWehpr03vpv+1j6t4RaRqvBBkG/vROeXz3yN1y4eX7Ktu6WLO3ea0mh7D7vbdtEcaswL\nk0Rk+3k6yF3XZXA4TaKjmbaW6o92vzt0ktcuHqcnmuBY71H2xnezN9ZPNHyDG2mIiGwTTwf5lYlZ\nJmfmuH1fZ9W/1/DUCF+yf0FzsJl/dPhXSUR3Vv17iohUwtPLIxY/Eai6ZZVsPsvn3/5zsoU5Pn77\nzyvERaSueDrIz23TROdXznyNy1PDvL//Ie7tPlzV7yUisl6eDvKB0tLDfT3VG5F/d+gkrw99jz2x\nfn7u4Ieq9n1ERDbKs0Huui4Dw2l6dkSJNlen1F9eF//EnU9r+aCI1CXPBvnotRlmMjkOVGnZoeri\nIuIVng3yhbJKlYJcdXER8QrPBnk170GuuriIeIlng3xgOIUD7N3iiU7VxUXEazwZ5IXSRGfvzigt\nTVs30ZnNZ/mvb/+Z6uIi4imeDPKRq9PMZvNbvn78y2e+xtDUiOriIuIpngzyalzR+d2hk3xHdXER\n8SBvBnlpxcqBLRqRqy4uIl7mzSAfTuE4sKenbdPnUl1cRLzOc0FeKLgMjqTZ1dVKU3jzn66juriI\neJ3ngnzoyhTZucKWrB9XXVxE/MBzQb4w0bnJ+rjq4iLiF94N8k2sWFFdXET8xINBniIYcNiT2PhE\np+riIuIna14WaYwJAC8AR4AM8Ky19mzZ/k8BzwLJ0qZfs9baKrSVfL7A+ZFJ+rtaiWxwonNJXfyW\nD29xC0VEtl8l17c/CTRbax80xhwDngc+Wrb/PuCXrbUnq9HAcudH0szlChsuq1xXFw94+iNLRUSA\nyoL8EeBVAGvtG8aYo8v23wf8ljGmF/iGtfYPVjtZZ2eUUGhjo+kffHcQgEO3dJNIrC/MM7ks//bE\nF8kW5vj1h36FO/bs31Ab6s16+8Hv1B+L1BdL+bk/KgnyODBR9jhvjAlZa3Olx18C/jOQAl4xxnzY\nWvv1lU42Pj694ca+d/EaAF1tYZLJ9Lqe+2fvfoULqSEe3f0QNzffsu7n16NEIuaL17FV1B+L1BdL\n+aE/VvtFVMlkZwooP0NgPsSNMQ7w7621Y9baLPAN4J5NtHVVZy9cIxhw6O9a30RneV387x9UXVxE\n/KWSID8OPAFQqpGfKtsXB942xrSVQv3vAFWplefyBQaGUuzubiMcqnyxjeriIuJ3laTaK8DjxpjX\nAQd4xhjzFNBmrX3RGPPbwLcormj5a2vt/6lGQy8lp5jLFdb1GZ3l68U/cegXtV5cRHxpzSC31haA\n55ZtPl22/2Xg5S1u13XOj85fCFT5FZ3z68Uf3a314iLiX565IOimXe08fHgX99zSVdHxqouLSKPw\nTJD3d7Xy6X9wP7FoZM1jVRcXkUbimSCvlO6jIiKNxndBrrq4iDQaXwW56uIi0oh8E+Sqi4tIo/JF\nkKsuLiKNzBdBrrq4iDQyzwe56uIi0ug8HeSqi4uIeDjIVRcXESnybJCrLi4iUuTJIJ+vi+9VXVxE\nxHtBvqQufkh1cRERTwV5JrdYF3/69o/R1aK6uIiIp4L8pTf/R6ku/jD3dN9V6+aIiNQFzwT5u1fO\n8K1zr5fq4h+qdXNEROqGZwrM8aYY9/cf4cN7f1Z1cRGRMp4Zkfe39fGbjzxHV8uOWjdFRKSueCbI\nRUTkxhTkIiIepyAXEfE4BbmIiMcpyEVEPE5BLiLicQpyERGPU5CLiHic47purdsgIiKboBG5iIjH\nKchFRDxOQS4i4nEKchERj1OQi4h4nIJcRMTjFOQiIh7niY/aMcYEgBeAI0AGeNZae7a2rao+Y0wY\neAnYDzQBvwe8A3wBcIG3gX9srS0YYz4J/BqQA37PWvv1WrS52owx3cBJ4HGKr/ULNG5f/Bbw94AI\nxZ+P12jQ/ij9rPwpxZ+VPPBJGuj/h1dG5E8CzdbaB4FPA8/XuD3b5WngirX2fcAHgf8E/CHwO6Vt\nDvBRY0wv8E+Bh4GfAf7AGNNUozZXTemH9U+AmdKmRu6Lx4CHKL7OR4E9NHB/AE8AIWvtQ8C/An6f\nBuoPrwT5I8CrANbaN4CjtW3OtvkK8C9LXzsURxD3URx5Afwl8NPATwHHrbUZa+0EcBY4vM1t3Q6f\nAT4LXC49buS++BngFPAK8L+Br9PY/XEGCJXevceBORqoP7wS5HFgouxx3hjjibLQZlhrJ621aWNM\nDPifwO8AjrV2/r4KaaCd6/tnfrtvGGN+BUhaa79Ztrkh+6Kki+KA5mPAc8CfA4EG7o9JimWV08Dn\ngP9AA/3/8EqQp4BY2eOAtTZXq8ZsJ2PMHuBbwMvW2i8ChbLdMeAa1/fP/HY/+VXgcWPM3wJ3A/8N\n6C7b30h9AXAF+Ka1NmuttcAsSwOp0frjUxT741aKc2l/SnHuYJ6v+8MrQX6cYg0MY8wxim8pfc8Y\n0wP8FfAvrLUvlTZ/v1QfBfhZ4P8C/w94nzGm2RjTDtxOcXLHN6y177fWPmqtfQz4AfDLwF82Yl+U\nfBv4oDHGMcbsAlqBv27g/hhncaR9FQjTQD8rnrj7YdmqlcMUa8XPWGtP17ZV1WeM+WPgFym+XZz3\nzyi+bYwA7wKftNbmSzPx/5DiL+d/Y6396na3d7uURuXPUXx38jkatC+MMf8O+ADF1/nbwDkatD+M\nMW0UV3j1UXz9fwycoEH6wxNBLiIiK/NKaUVERFagIBcR8TgFuYiIxynIRUQ8TkEuIuJxCnIREY9T\nkIuIeNz/B0dg8UlO5UdqAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x28d463a2b70>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
+    "%%time\n",
     "n_epochs = 1000\n",
-    "batch_size = 50\n",
+    "batch_size = 150\n",
+    "\n",
+    "l_accu=[]\n",
+    "l_batch=[]\n",
+    "l_epoch=[]\n",
     "\n",
     "with tf.Session() as sess:\n",
     "    init.run()\n",
@@ -352,8 +374,24 @@
     "        acc_batch = accuracy.eval(feed_dict={X: X_batch, y: y_batch})\n",
     "        acc_valid = accuracy.eval(feed_dict={X: X_test, y: y_test_cls})\n",
     "        if epoch%100==0 :\n",
-    "            print(epoch, \"Batch accuracy:\", acc_batch, \"Validation accuracy:\", acc_valid)\n"
+    "            print(epoch, \"Batch accuracy:\", acc_batch, \"Validation accuracy:\", acc_valid)\n",
+    "            l_epoch+=[epoch]\n",
+    "            l_batch+=[acc_batch]\n",
+    "            l_accu+=[acc_valid]\n",
+    "            \n",
+    "            \n",
+    "plt.plot(l_epoch,l_batch)\n",
+    "plt.plot(l_epoch,l_accu)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -382,6 +420,35 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.1"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
