New data prep for flatten time series

--- a/etudes/data preparation/Flattened Time Series with mean -- Data Preparation .ipynb
+++ b/etudes/data preparation/Flattened Time Series with mean -- Data Preparation .ipynb
@@ -54,11 +54,11 @@
     }
    ],
    "source": [
-    "from transplant.tools.dataset import Dataset \n",
+    "from transplant.tools.learningset import Learningset\n",
     "\n",
-    "dataset = Dataset()\n",
+    "learningset = Learningset()\n",
     "\n",
-    "X_train, X_test , y_train, y_test , X_col = dataset.get_data_merged_dynamic_flatten()"
+    "X_train, X_test , y_train, y_test , X_col = learningset.get_data_merged_dynamic_flatten()"
    ]
   },
   {
