--- a/etudes/neural network/RNN for single time series predicting extubation .ipynb
+++ b/etudes/neural network/RNN for single time series predicting extubation .ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Idea : Seeing how good individul time series are able to predict the extubation "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to to this we should built a RNN with LSTM"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -157,8 +171,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
@@ -174,14 +190,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 20.8 s\n"
+      "Wall time: 21.9 s\n"
      ]
     }
    ],
@@ -197,153 +213,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(254, 74)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def shuffle_batch(X, y, batch_size):\n",
-    "    rnd_idx = np.random.permutation(len(X))\n",
-    "    n_batches = len(X) // batch_size\n",
-    "    for batch_idx in np.array_split(rnd_idx, n_batches):\n",
-    "        X_batch, y_batch = X[batch_idx], y[batch_idx]\n",
-    "        yield X_batch, y_batch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'reset_graph' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-11-58dea977599a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mreset_graph\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mlstm_cell\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcontrib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrnn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mBasicLSTMCell\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnum_units\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mn_neurons\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'reset_graph' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "reset_graph()\n",
-    "\n",
-    "lstm_cell = tf.contrib.rnn.BasicLSTMCell(num_units=n_neurons)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "n_steps = 28\n",
-    "n_inputs = 28\n",
-    "n_neurons = 150\n",
-    "n_outputs = 10\n",
-    "n_layers = 3\n",
-    "\n",
-    "learning_rate = 0.001\n",
-    "\n",
-    "X = tf.placeholder(tf.float32, [None, n_steps, n_inputs])\n",
-    "y = tf.placeholder(tf.int32, [None])\n",
-    "\n",
-    "lstm_cells = [tf.contrib.rnn.BasicLSTMCell(num_units=n_neurons)\n",
-    "              for layer in range(n_layers)]\n",
-    "multi_cell = tf.contrib.rnn.MultiRNNCell(lstm_cells)\n",
-    "outputs, states = tf.nn.dynamic_rnn(multi_cell, X, dtype=tf.float32)\n",
-    "top_layer_h_state = states[-1][1]\n",
-    "logits = tf.layers.dense(top_layer_h_state, n_outputs, name=\"softmax\")\n",
-    "xentropy = tf.nn.sparse_softmax_cross_entropy_with_logits(labels=y, logits=logits)\n",
-    "loss = tf.reduce_mean(xentropy, name=\"loss\")\n",
-    "optimizer = tf.train.AdamOptimizer(learning_rate=learning_rate)\n",
-    "training_op = optimizer.minimize(loss)\n",
-    "correct = tf.nn.in_top_k(logits, y, 1)\n",
-    "accuracy = tf.reduce_mean(tf.cast(correct, tf.float32))\n",
-    "    \n",
-    "init = tf.global_variables_initializer()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "states"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "top_layer_h_state"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "n_epochs = 10\n",
-    "batch_size = 150\n",
-    "\n",
-    "with tf.Session() as sess:\n",
-    "    init.run()\n",
-    "    for epoch in range(n_epochs):\n",
-    "        for iteration in range(mnist.train.num_examples // batch_size):\n",
-    "            X_batch, y_batch = mnist.train.next_batch(batch_size)\n",
-    "            X_batch = X_batch.reshape((batch_size, n_steps, n_inputs))\n",
-    "            sess.run(training_op, feed_dict={X: X_batch, y: y_batch})\n",
-    "        acc_train = accuracy.eval(feed_dict={X: X_batch, y: y_batch})\n",
-    "        acc_test = accuracy.eval(feed_dict={X: X_test, y: y_test})\n",
-    "        print(\"Epoch\", epoch, \"Train accuracy =\", acc_train, \"Test accuracy =\", acc_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "lstm_cell = tf.contrib.rnn.LSTMCell(num_units=n_neurons, use_peepholes=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "gru_cell = tf.contrib.rnn.GRUCell(num_units=n_neurons)"
-   ]
   },
   {
    "cell_type": "code",
