--- a/notebooks/Karine_Validation.ipynb
+++ b/notebooks/Karine_Validation.ipynb
@@ -213,7 +213,7 @@
     "    \"\"\"\n",
     "    Test if threshold% of our value (NMTratio) is > 50% /do not take into account Temp = 0\n",
     "    \"\"\"\n",
-    "    df = time_offset_dynamic()\n",
+    "    df = time_offset_dynamic(data_dyn)\n",
     "    non_zeros = df['NMTratio'][df['NMTratio']!=0].count()\n",
     "    nb_ok = df['NMTratio'][df['NMTratio']>obj].count() \n",
     "    return (nb_ok/non_zeros)*100>=threshold"
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,10 +253,10 @@
     "    \"\"\"\n",
     "    Return boolean \n",
     "    \"\"\"\n",
-    "    sum_True = test_PASm_sup(data_dyn, threshold=90, obj=60) + \\\n",
-    "               test_noradrenaline(data, nora_max=1.5, nora_min=1) + \\\n",
-    "               test_ratio_pao2_fio2(data, obj=200) + \\\n",
-    "               test_PAP_diminution(data, paps_max=50, paps_min=30)\n",
+    "    sum_True = int(test_PASm_sup(data_dyn, threshold=90, obj=60)) + \\\n",
+    "               int(test_noradrenaline(data, nora_max=1.5, nora_min=1)) + \\\n",
+    "               int(test_ratio_pao2_fio2(data, obj=200)) + \\\n",
+    "               int(test_PAP_diminution(data, paps_max=50, paps_min=30))\n",
     "    if sum_True == 4:\n",
     "        return \"Node INO weaning Test\"\n",
     "    return \"Transfer to ICU with ECMO and mechanical ventilation\""
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,8 +284,8 @@
     "    \"\"\"\n",
     "    Return boolean \n",
     "    \"\"\"\n",
-    "    sum_True = test_augm_ratio_pao2_fio2(data,threshold_augm=0) + \\\n",
-    "               test_PAP_diminution(data, paps_max=50, paps_min=30)\n",
+    "    sum_True = int(test_augm_ratio_pao2_fio2(data,threshold_augm=0)) + \\\n",
+    "               int(test_PAP_diminution(data, paps_max=50, paps_min=30))\n",
     "    if sum_True == 2:\n",
     "        return \"Node ratio-300 test\"\n",
     "    return \"Transfer to ICU with mechanical ventilation and iNO therapy\""
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,12 +313,12 @@
     "    \"\"\"\n",
     "    Return boolean \n",
     "    \"\"\"\n",
-    "    sum_True = test_temperature_sup36(data_dyn,threshold=90) + \\\n",
-    "               test_NMT_sup(data_dyn,obj=50, threshold=90)+ \\\n",
-    "               test_PASm_sup(data_dyn, threshold=90, obj=60) + \\\n",
-    "               test_noradrenaline(data, nora_max=1.5, nora_min=1) + \\\n",
-    "               test_ratio_pao2_fio2(data,obj=300)\n",
-    "    if sum_True == 5:\n",
+    "    sum_True = int(test_temperature_sup36(data_dyn,threshold=90)) + \\\n",
+    "               int(test_NMT_sup(data_dyn,obj=50, threshold=90))+ \\\n",
+    "               int(test_PASm_sup(data_dyn, threshold=80, obj=60)) + \\\n",
+    "               int(test_noradrenaline(data, nora_max=1.5, nora_min=1)) + \\\n",
+    "               int(test_ratio_pao2_fio2(data,obj=300))\n",
+    "    if sum_True ==5:\n",
     "        return  \"Transfer to ICU with standard oxygen therapy or NIV\"\n",
     "    return \"Transfer to ICU with mechanical ventilation\""
    ]
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,6 +368,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tests\n",
+    "\n",
+    "- avec les données postops\n",
+    "- avec notre label à nous"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recode_leaf_in_immediate_extubation(leaf):\n",
+    "    \"\"\" recode the leaves of the tree with immediate_extubation 0/1\"\"\"\n",
+    "    if leaf ==\"Transfer to ICU with standard oxygen therapy or NIV\":\n",
+    "        return 1\n",
+    "    return 0"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -376,69 +399,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 127,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Transfer to ICU with mechanical ventilation and iNO therapy'"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "decision_empirique(df_static,df_dynamic,id_patient=145)"
+    "df_results=df_static[['id_patient','immediate_extubation']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "144    0\n",
-       "Name: immediate_extubation, dtype: int64"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_static['immediate_extubation'][df_static['id_patient']==145]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "144    0\n",
-       "Name: NO_dependence, dtype: int64"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_static['NO_dependence'][df_static['id_patient']==145]  #NO à 0 ok"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -450,74 +420,288 @@
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  \"\"\"\n"
+      "  \"\"\"\n",
+      "/home/karine/anaconda2/envs/py36/lib/python3.6/site-packages/ipykernel_launcher.py:9: RuntimeWarning: invalid value encountered in long_scalars\n",
+      "  if __name__ == '__main__':\n",
+      "/home/karine/anaconda2/envs/py36/lib/python3.6/site-packages/ipykernel_launcher.py:8: RuntimeWarning: invalid value encountered in long_scalars\n",
+      "  \n",
+      "/home/karine/anaconda2/envs/py36/lib/python3.6/site-packages/ipykernel_launcher.py:10: RuntimeWarning: invalid value encountered in long_scalars\n",
+      "  # Remove the CWD from sys.path while we load stuff.\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Transfer to ICU with ECMO and mechanical ventilation'"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "decision_empirique(df_static,df_dynamic,id_patient=3)"
+    "ids = df_results['id_patient'].values.tolist()\n",
+    "leaves = [decision_empirique(df_static,df_dynamic,id_patient=x) for x in ids]\n",
+    "recode = [recode_leaf_in_immediate_extubation(x) for x in leaves]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2    0\n",
-       "Name: immediate_extubation, dtype: int64"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/karine/anaconda2/envs/py36/lib/python3.6/site-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n",
+      "/home/karine/anaconda2/envs/py36/lib/python3.6/site-packages/ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \n"
+     ]
     }
    ],
    "source": [
-    "df_static['immediate_extubation'][df_static['id_patient']==3]"
+    "df_results['leaves']=leaves\n",
+    "df_results['leaves_1/0']=recode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#add true "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transplant.data.dataset import Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = Dataset()\n",
+    "train, test = dataset.get_static()\n",
+    "data_static = pd.concat([train, test])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_results = pd.merge(df_results, data_static[['id_patient','target']], how='left', on='id_patient')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_patient</th>\n",
+       "      <th>immediate_extubation</th>\n",
+       "      <th>leaves</th>\n",
+       "      <th>leaves_1/0</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Transfer to ICU with mechanical ventilation</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Transfer to ICU with standard oxygen therapy o...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Transfer to ICU with ECMO and mechanical venti...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Transfer to ICU with mechanical ventilation an...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Transfer to ICU with mechanical ventilation an...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "2    1.0\n",
-       "Name: ECMO, dtype: float64"
+       "   id_patient  immediate_extubation  \\\n",
+       "0           1                     0   \n",
+       "1           2                     1   \n",
+       "2           3                     0   \n",
+       "3           4                     0   \n",
+       "4           5                     0   \n",
+       "\n",
+       "                                              leaves  leaves_1/0  target  \n",
+       "0        Transfer to ICU with mechanical ventilation           0       0  \n",
+       "1  Transfer to ICU with standard oxygen therapy o...           1       1  \n",
+       "2  Transfer to ICU with ECMO and mechanical venti...           0       0  \n",
+       "3  Transfer to ICU with mechanical ventilation an...           0       1  \n",
+       "4  Transfer to ICU with mechanical ventilation an...           0       0  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_static['ECMO'][df_static['id_patient']==3] #ou equivalent CEC"
+    "df_results.head()"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 134,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>immediate_extubation</th>\n",
+       "      <th>leaves_1/0</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>leaves</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Transfer to ICU with ECMO and mechanical ventilation</th>\n",
+       "      <td>27</td>\n",
+       "      <td>0</td>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Transfer to ICU with mechanical ventilation</th>\n",
+       "      <td>22</td>\n",
+       "      <td>0</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Transfer to ICU with mechanical ventilation and iNO therapy</th>\n",
+       "      <td>82</td>\n",
+       "      <td>0</td>\n",
+       "      <td>95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Transfer to ICU with standard oxygen therapy or NIV</th>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                    immediate_extubation  \\\n",
+       "leaves                                                                     \n",
+       "Transfer to ICU with ECMO and mechanical ventil...                    27   \n",
+       "Transfer to ICU with mechanical ventilation                           22   \n",
+       "Transfer to ICU with mechanical ventilation and...                    82   \n",
+       "Transfer to ICU with standard oxygen therapy or...                     6   \n",
+       "\n",
+       "                                                    leaves_1/0  target  \n",
+       "leaves                                                                  \n",
+       "Transfer to ICU with ECMO and mechanical ventil...           0      41  \n",
+       "Transfer to ICU with mechanical ventilation                  0      26  \n",
+       "Transfer to ICU with mechanical ventilation and...           0      95  \n",
+       "Transfer to ICU with standard oxygen therapy or...           7       7  "
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Tests\n",
-    "\n",
-    "- avec les données postops\n",
-    "- avec notre label à nous"
+    "df_results[[\"immediate_extubation\",\"leaves\",\"leaves_1/0\",'target']].groupby('leaves').sum()"
    ]
   },
   {
