--- a/notebooks/Karine_Validation-Copy1.ipynb
+++ b/notebooks/Karine_Validation-Copy1.ipynb
@@ -2625,6 +2625,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7073170731707317"
+      ]
+     },
+     "execution_count": 184,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_true=df_results_missing_false['immediate_extubation'], y_pred=df_results_missing_false['result_tree_immediate_extubation'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 175,
    "metadata": {},
    "outputs": [],
@@ -2802,6 +2831,26 @@
    ],
    "source": [
     "(mat/df_results_missing_false.shape[0])*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6487804878048781"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_true=df_results_missing_false['target'], y_pred=df_results_missing_false['result_tree_immediate_extubation'])"
    ]
   },
   {
