--- a/notebooks/Feature Selection - Selection feature - Comparing Methods .ipynb
+++ b/notebooks/Feature Selection - Selection feature - Comparing Methods .ipynb
@@ -246,7 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nombre_de_feature=40 # ici on chosit le nombre de variable à \"shortlister\"\n",
+    "nombre_de_feature=30 # ici on chosit le nombre de variable à \"shortlister\"\n",
     "\n",
     "selection_best_feature = SelectKBest(score_func=chi2, k=nombre_de_feature)\n",
     "selected_feat_fit = selection_best_feature.fit(X, Y)"
@@ -260,14 +260,13 @@
     {
      "data": {
       "text/plain": [
-       "Index(['Donneur_CPT', 'LAS', 'PAPS', 'PF_donor', 'Poids', 'body_mass_index',\n",
+       "Index(['Donneur_CPT', 'LAS', 'PAPS', 'PF_donor', 'Poids',\n",
        "       'start_operation_day', 'ends_operation_day', 'B.I.S_mean',\n",
-       "       'BIS SR_mean', 'PNIm_mean', 'PNIs_mean', 'SvO2 (m)_mean', 'Temp_mean',\n",
-       "       'VT_mean', 'B.I.S_std', 'BIS SR_std', 'PNIm_std', 'PNIs_std',\n",
-       "       'SpO2_std', 'SvO2 (m)_std', 'B.I.S_max', 'BIS SR_max', 'PASs_max',\n",
-       "       'PEEPtotal_max', 'PNId_max', 'PNIm_max', 'PNIs_max', 'SvO2 (m)_max',\n",
-       "       'VT_max', 'FC_min', 'FR_min', 'PAPdia_min', 'PAPmoy_min', 'PAPsys_min',\n",
-       "       'PASd_min', 'PASm_min', 'PEEPtotal_min', 'Pmax_min', 'SpO2_min'],\n",
+       "       'BIS SR_mean', 'PNIs_mean', 'Temp_mean', 'VT_mean', 'B.I.S_std',\n",
+       "       'BIS SR_std', 'PNIs_std', 'B.I.S_max', 'BIS SR_max', 'PNId_max',\n",
+       "       'PNIm_max', 'PNIs_max', 'SvO2 (m)_max', 'VT_max', 'FC_min',\n",
+       "       'PAPdia_min', 'PAPmoy_min', 'PAPsys_min', 'PASd_min', 'PASm_min',\n",
+       "       'Pmax_min', 'SpO2_min'],\n",
        "      dtype='object')"
       ]
      },
@@ -316,7 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nombre_de_feature=15  # ici on chosit le nombre de variable à \"shortlister\""
+    "nombre_de_feature=30  # ici on chosit le nombre de variable à \"shortlister\""
    ]
   },
   {
@@ -345,11 +344,15 @@
     {
      "data": {
       "text/plain": [
-       "Index(['Aspirations_donor', 'PFO', 'pathologie', 'plasmapherese',\n",
-       "       'preoperative_ECMO', 'preoperative_ICU',\n",
-       "       'preoperative_mechanical_ventilation', 'super_urgence', 'ETCO2_mean',\n",
-       "       'Pmean_mean', 'declampage_cote1_done_mean',\n",
-       "       'declampage_cote2_done_mean', 'BIS SR_std', 'FR_min', 'Pmean_min'],\n",
+       "Index(['Aspirations_donor', 'Insuffisance_renale', 'PFO', 'RX_donor',\n",
+       "       'body_mass_index', 'pathologie', 'plasmapherese', 'preoperative_ECMO',\n",
+       "       'preoperative_ICU', 'preoperative_mechanical_ventilation',\n",
+       "       'super_urgence', 'start_operation_month', 'ETCO2_mean',\n",
+       "       'PEEPtotal_mean', 'Pmax_mean', 'Pmean_mean', 'SvO2 (m)_mean',\n",
+       "       'declampage_cote1_done_mean', 'declampage_cote2_done_mean',\n",
+       "       'BIS SR_std', 'FiO2_std', 'Pmax_std', 'Pmean_std', 'SvO2 (m)_std',\n",
+       "       'declampage_cote1_done_std', 'DC_max', 'ETCO2_max', 'FR_min',\n",
+       "       'Pmean_min', 'SpO2_min'],\n",
        "      dtype='object')"
       ]
      },
@@ -389,10 +392,13 @@
     {
      "data": {
       "text/plain": [
-       "Index(['Poids', 'ends_operation_day', 'ETCO2_mean', 'PASs_mean',\n",
-       "       'PEEPtotal_mean', 'Pmax_mean', 'Pmean_mean', 'SpO2_mean', 'Temp_mean',\n",
-       "       'VT_mean', 'declampage_cote2_done_mean', 'PASd_std', 'VT_std',\n",
-       "       'PASm_max', 'Temp_max'],\n",
+       "Index(['LAS', 'PF_donor', 'Poids', 'Poids_donor', 'body_mass_index',\n",
+       "       'start_operation_day', 'ends_operation_day', 'ETCO2_mean', 'FR_mean',\n",
+       "       'FiO2_mean', 'PASd_mean', 'PEEPtotal_mean', 'Pmax_mean', 'SpO2_mean',\n",
+       "       'Temp_mean', 'declampage_cote1_done_mean', 'PASd_std', 'PASs_std',\n",
+       "       'PEEPtotal_std', 'PNIs_std', 'SpO2_std', 'Temp_std',\n",
+       "       'declampage_cote2_done_std', 'ETCO2_max', 'PAPdia_max', 'PAPsys_max',\n",
+       "       'PASd_max', 'PASm_max', 'PASs_max', 'Pmean_max'],\n",
        "      dtype='object')"
       ]
      },
@@ -432,9 +438,13 @@
     {
      "data": {
       "text/plain": [
-       "Index(['LAS', 'age', 'body_mass_index', 'oto_score', 'ETCO2_mean', 'PASd_mean',\n",
-       "       'PASs_mean', 'Temp_mean', 'FR_std', 'PEEPtotal_std', 'PNId_std',\n",
-       "       'SpO2_std', 'SvO2 (m)_std', 'PASm_max', 'VT_max'],\n",
+       "Index(['LAS', 'Poids', 'RX_donor', 'age', 'body_mass_index', 'oto_score',\n",
+       "       'time_on_waiting_liste', 'ends_operation_year', 'ends_operation_day',\n",
+       "       'ETCO2_mean', 'FC_mean', 'FiO2_mean', 'PASd_mean', 'PASm_mean',\n",
+       "       'PASs_mean', 'PEEPtotal_mean', 'Pmean_mean', 'Temp_mean', 'B.I.S_std',\n",
+       "       'FR_std', 'FiO2_std', 'PEEPtotal_std', 'PNId_std', 'SpO2_std',\n",
+       "       'SvO2 (m)_std', 'VT_std', 'declampage_cote2_done_std', 'PAPsys_max',\n",
+       "       'PASm_max', 'VT_max'],\n",
        "      dtype='object')"
       ]
      },
@@ -474,9 +484,13 @@
     {
      "data": {
       "text/plain": [
-       "Index(['LAS', 'body_mass_index', 'oto_score', 'ETCO2_mean', 'FiO2_mean',\n",
-       "       'PASs_mean', 'PEEPtotal_mean', 'PNId_mean', 'SpO2_mean', 'Temp_mean',\n",
-       "       'VT_mean', 'PASs_std', 'PEEPtotal_std', 'SpO2_std', 'PASm_max'],\n",
+       "Index(['BMI_donor', 'LAS', 'Poids', 'body_mass_index', 'oto_score',\n",
+       "       'time_on_waiting_liste', 'ETCO2_mean', 'FR_mean', 'FiO2_mean',\n",
+       "       'PASs_mean', 'PEEPtotal_mean', 'PNId_mean', 'Pmean_mean', 'SpO2_mean',\n",
+       "       'Temp_mean', 'VT_mean', 'declampage_cote2_done_mean', 'FC_std',\n",
+       "       'PASm_std', 'PASs_std', 'PEEPtotal_std', 'PNId_std', 'SpO2_std',\n",
+       "       'Temp_std', 'VT_std', 'FR_max', 'PAPdia_max', 'PASm_max', 'Temp_max',\n",
+       "       'PASm_min'],\n",
        "      dtype='object')"
       ]
      },
@@ -516,10 +530,13 @@
     {
      "data": {
       "text/plain": [
-       "Index(['Age_donor', 'LAS', 'Poids', 'body_mass_index', 'oto_score',\n",
-       "       'pathologie', 'start_operation_day', 'ETCO2_mean', 'FiO2_mean',\n",
-       "       'declampage_cote1_done_mean', 'FiO2_std', 'PEEPtotal_std', 'VT_std',\n",
-       "       'BIS SR_max', 'Pmean_max'],\n",
+       "Index(['Age_donor', 'Donneur_CPT', 'LAS', 'PF_donor', 'Poids',\n",
+       "       'body_mass_index', 'oto_score', 'ends_operation_month', 'ETCO2_mean',\n",
+       "       'FiO2_mean', 'PASm_mean', 'PASs_mean', 'PEEPtotal_mean', 'PNId_mean',\n",
+       "       'PNIm_mean', 'Pmean_mean', 'Temp_mean', 'VT_mean',\n",
+       "       'declampage_cote2_done_mean', 'FiO2_std', 'PASd_std', 'PEEPtotal_std',\n",
+       "       'Pmean_std', 'SpO2_std', 'VT_std', 'declampage_cote2_done_std',\n",
+       "       'BIS SR_max', 'PAPsys_max', 'PASd_max', 'Pmax_max'],\n",
        "      dtype='object')"
       ]
      },
@@ -562,7 +579,15 @@
     {
      "data": {
       "text/plain": [
-       "{'ETCO2_mean'}"
+       "{'ETCO2_mean',\n",
+       " 'FiO2_mean',\n",
+       " 'LAS',\n",
+       " 'PEEPtotal_mean',\n",
+       " 'PEEPtotal_std',\n",
+       " 'Poids',\n",
+       " 'SpO2_std',\n",
+       " 'Temp_mean',\n",
+       " 'body_mass_index'}"
       ]
      },
      "execution_count": 20,
@@ -592,7 +617,7 @@
     {
      "data": {
       "text/plain": [
-       "{'ETCO2_mean'}"
+       "{'ETCO2_mean', 'PEEPtotal_mean', 'body_mass_index'}"
       ]
      },
      "execution_count": 21,
@@ -619,7 +644,7 @@
     {
      "data": {
       "text/plain": [
-       "set()"
+       "{'LAS', 'Poids', 'Temp_mean'}"
       ]
      },
      "execution_count": 22,
@@ -649,7 +674,7 @@
     {
      "data": {
       "text/plain": [
-       "{'BIS SR_std', 'FR_min'}"
+       "{'BIS SR_std', 'SpO2_min'}"
       ]
      },
      "execution_count": 23,
@@ -684,7 +709,17 @@
     {
      "data": {
       "text/plain": [
-       "['ETCO2_mean', 'FR_min', 'BIS SR_std']"
+       "['ETCO2_mean',\n",
+       " 'FiO2_mean',\n",
+       " 'PEEPtotal_std',\n",
+       " 'PEEPtotal_mean',\n",
+       " 'SpO2_std',\n",
+       " 'Temp_mean',\n",
+       " 'Poids',\n",
+       " 'body_mass_index',\n",
+       " 'LAS',\n",
+       " 'BIS SR_std',\n",
+       " 'SpO2_min']"
       ]
      },
      "execution_count": 24,
@@ -712,44 +747,42 @@
      "data": {
       "text/plain": [
        "['ETCO2_mean',\n",
+       " 'FiO2_mean',\n",
+       " 'PEEPtotal_std',\n",
+       " 'PEEPtotal_mean',\n",
+       " 'SpO2_std',\n",
+       " 'Temp_mean',\n",
+       " 'Poids',\n",
+       " 'body_mass_index',\n",
+       " 'LAS',\n",
        " 'Donneur_CPT',\n",
        " 'LAS',\n",
        " 'PAPS',\n",
        " 'PF_donor',\n",
        " 'Poids',\n",
-       " 'body_mass_index',\n",
        " 'start_operation_day',\n",
        " 'ends_operation_day',\n",
        " 'B.I.S_mean',\n",
        " 'BIS SR_mean',\n",
-       " 'PNIm_mean',\n",
        " 'PNIs_mean',\n",
-       " 'SvO2 (m)_mean',\n",
        " 'Temp_mean',\n",
        " 'VT_mean',\n",
        " 'B.I.S_std',\n",
        " 'BIS SR_std',\n",
-       " 'PNIm_std',\n",
        " 'PNIs_std',\n",
-       " 'SpO2_std',\n",
-       " 'SvO2 (m)_std',\n",
        " 'B.I.S_max',\n",
        " 'BIS SR_max',\n",
-       " 'PASs_max',\n",
-       " 'PEEPtotal_max',\n",
        " 'PNId_max',\n",
        " 'PNIm_max',\n",
        " 'PNIs_max',\n",
        " 'SvO2 (m)_max',\n",
        " 'VT_max',\n",
        " 'FC_min',\n",
-       " 'FR_min',\n",
        " 'PAPdia_min',\n",
        " 'PAPmoy_min',\n",
        " 'PAPsys_min',\n",
        " 'PASd_min',\n",
        " 'PASm_min',\n",
-       " 'PEEPtotal_min',\n",
        " 'Pmax_min',\n",
        " 'SpO2_min']"
       ]
